--- a/materials_eda.ipynb
+++ b/materials_eda.ipynb
@@ -372,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf-gpu",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
